fix sidebar-width-collapsed

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,5 +10,5 @@
     // Sizes
     --navbar-height: 50px;
     --sidebar-width: 300px;
-    --sidebar-width-collapsed: 120px;
+    --sidebar-width-collapsed: 130px;
 }
